--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,28 +1,122 @@
 body {
+  color: #40514e;
   margin: 0;
   text-align: center;
   font-family: 'Merriweather', serif;
 }
 h1 {
-  margin: 0;
+  font-size: 5rem;
+  margin: 50px auto 0 auto;
   font-family: 'Cuprum', sans-serif;
+  color: #66BFBF;
+  line-height: 2;
 }
 h2 {
 font-family: 'Montserrat', sans-serif;
+color: #66BFBF;
+font-size: 2.5rem;
+padding-bot: 10px;
+
 }
 h3 {
+  color: #11999E;
   family-font: 'Montserrat', sans-serif;
+  font-size: 1.5rem;
+  font-weight: normal;
+}
+p {
+  line-height: 2;
+}
+hr {
+  border: dotted #EAF6F6;
+  border-bottom: none;
+  width: 5%;
+  margin: 100px;
+}
+a {
+  color: #11999E;
+  font-family: 'Montserrat', sans-serif;
+  margin: 10px 20px;
+  text-decoration: none;
+}
+a:hover {
+  color: #EAF6F6;
+}
+.btn {
+  <style type="text/css">
+	-moz-box-shadow:inset 0px 1px 0px 0px #0cd1d1;
+	-webkit-box-shadow:inset 0px 1px 0px 0px #0cd1d1;
+	box-shadow:inset 0px 1px 0px 0px #0cd1d1;
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #11cdd4), color-stop(1, #11999e) );
+	background:-moz-linear-gradient( center top, #11cdd4 5%, #11999e 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#11cdd4', endColorstr='#11999e');
+	background-color:#11cdd4;
+	-webkit-border-top-left-radius:8px;
+	-moz-border-radius-topleft:8px;
+	border-top-left-radius:8px;
+	-webkit-border-top-right-radius:8px;
+	-moz-border-radius-topright:8px;
+	border-top-right-radius:8px;
+	-webkit-border-bottom-right-radius:8px;
+	-moz-border-radius-bottomright:8px;
+	border-bottom-right-radius:8px;
+	-webkit-border-bottom-left-radius:8px;
+	-moz-border-radius-bottomleft:8px;
+	border-bottom-left-radius:8px;
+text-indent:0;
+	border:1px solid #0cd1d1;
+	display:inline-block;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	font-style:normal;
+height:40px;
+	line-height:40px;
+width:100px;
+	text-decoration:none;
+	text-align:center;
+	text-shadow:1px 1px 0px #696560;
+}.btn:hover {
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #11999e), color-stop(1, #11cdd4) );
+	background:-moz-linear-gradient( center top, #11999e 5%, #11cdd4 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#11999e', endColorstr='#11cdd4');
+	background-color:#11999e;
+}.btn:active {
+	position:relative;
+	top:1px;
+}
+.intro {
+  width:30%;
+  margin: auto;
+}
+.copyright {
+  color: #EAF6F6;
+  font-size: 0.75em;
+  padding: 20px 0;
+}
+.contact-me {
+  width: 40%;
+  margin: 40px auto 40px;
 }
 .top-container {
-  background-color: #b0f4e6;
+  background-color: #bae8e8;
   position: relative;
   padding-top: 100px;
 }
 .middle-container {
-
+  color: #272343;
+  margin: 100px 0;
 }
 .bottom-container {
+  background-color: #66BFBF;
+  padding: 50px 0 20px;
 
+}
+.skill-row {
+  width: 50%;
+  margin: 100px auto 100px auto;
+  text-align: left;
 }
 .bottom-cloud{
   position: absolute;
@@ -34,4 +128,9 @@ h3 {
   position: absolute;
   right: 300px;
   top: 60px;
+}
+.experience {
+  width: 25%;
+  float: left;
+  margin: 30px;
 }
